syntax = "proto3";
package GP.Account;

enum Msg_Code
{
  START = 0;
  CREATE_ACCOUNT = 1;
  USER_SIGN_IN = 2;
}
message Create_Account
{
  message Req
  {
    string openid = 1;
    string openid_type = 2;
    string info = 3;
  }
  message Rsp
  {
    uint64 uid = 1;
    string info = 2;
  }
}

message User_Sign_In
{
  message Req
  {
    string openid = 1;
    string openid_type = 2;
    int     auto_create =3;
    string info = 4;
  }
  message Rsp
  {
    uint64 uid = 1;
    string info = 2;
  }
}


